//----自动生成，请勿修改----//
syntax = "proto3";
package assets;

option csharp_namespace = "Sample.GRpc.Protocol";
option go_package = "sailing.cn/protobuf/assets";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "protos/test_service.proto";

//IServiceTest2 Sample.Services.IServiceTest2Service
service Test2Service {
	
	// Test1
	rpc Test1(google.protobuf.Empty) returns(google.protobuf.Empty);
	
	// 这是修改
	rpc Test2(Test2Service_Test2Async_Request) returns(google.protobuf.Empty);
	
	// 这是修改2
	rpc Test2_2(Test2Service_Test2_2Async_Request) returns(google.protobuf.Empty);
	
	// 获取单个
	rpc GetById(Test2Service_GetByIdAsync_Request) returns(GRpcSampleClass);
	
	// 查询列表
	rpc Test4(GRpcSampleClass) returns(Test2ServiceListSampleClassResponse);
	
	// 这是删除
	rpc Test5(Test2Service_Test5Async_Request) returns(Test2ServiceListSampleClassResponse);
	
	// 
	rpc Test6(Test2Service_Test6Async_Request) returns(Test2Service_Test6Async_Response);
	
	// 
	rpc Test7(Test2ServiceIdRequest) returns(google.protobuf.Empty);
}

// Test2Service_GetByIdAsync_Request
message Test2Service_GetByIdAsync_Request {
	int32 id = 1;
}

// Test2Service_Test2_2Async_Request
message Test2Service_Test2_2Async_Request {
	repeated GRpcSampleClass model = 1;
}

// Test2Service_Test2Async_Request
message Test2Service_Test2Async_Request {
	int32 a = 1;
	GRpcSampleClass model = 2;
}

// Test2Service_Test5Async_Request
message Test2Service_Test5Async_Request {
	google.protobuf.StringValue id = 1;
}

// Test2Service_Test6Async_Request
message Test2Service_Test6Async_Request {
	int32 a = 1;
	google.protobuf.StringValue b = 2;
	google.protobuf.Int32Value c = 3;
}

// Test2Service_Test6Async_Response
message Test2Service_Test6Async_Response {
	int32 Data = 1;
}

// Test2ServiceIdRequest
message Test2ServiceIdRequest {
	google.protobuf.StringValue id = 1;
}

// Test2ServiceListSampleClassResponse
message Test2ServiceListSampleClassResponse {
	repeated GRpcSampleClass Data = 1;
}

